# Cerberus

./: .gitignore  README.md  TODO.txt  client_llamacpp.py  environment.yml  models.conf.example  pyproject.toml  requirements.txt
cerberus/: __init__.py  cli.py  client.py  config.py  deploy.py  download.py  node_launch.sh  placement.py  vram.py
cerberus/containers/: build_llamacpp_ibisco.sh  llamacpp_local.def
cerberus/estimator/: __init__.py  gguf_vram.py
containers/: build_llamacpp_local.sh
demo/ibisco/: README.md  allocate_gpus.py  download_models.sh  models.conf  prompts.txt  query_models.py  run_demo.sh  run_demo_ibisco.sh
demo/ibisco_multinode/: .gitignore  README.md  demo_client.py  models.conf  node_launch.sh  query_models.py  run_demo.sh  run_demo_multinode.sh  submit.sbatch
demo/local/: README.md  download_models.sh  models.conf  run_demo_local.sh
docs/: demo.md  download_modelli.md  installazione_container.md  panoramica.md  progetto.md  uso_llamacpp.md
guides/: cerberus_esecuzione_demo.md  cerberus_panoramica.md  cerberus_progetto.md  cerberus_tool.md  llamacpp_usage.md  llm_download.md
test/: README.md
test/demo/: demo_client.py
test/demo/ibisco/: .gitignore  README.md  models.conf  run_demo.sh
test/demo/ibisco_multinode/: README.md  models.conf  run_demo.sh
test/demo/local/: README.md  download_models.sh  models.conf  query_models.py  run_demo_local.sh
test/demo/local_multi/: README.md  models.conf  prompts.txt  (+2 more)
test/unit/: test_client.py  test_config.py  test_placement.py
vram_estimator/: gguf_vram_gui.py  gguf_vram_qt.py
